--- a/時鐘.html
+++ b/時鐘.html
@@ -42,7 +42,7 @@
       width: 512px;
       height: 512px;
       position: relative;
-      left: 15%;
+      left: 25%;
     }
 
     #h {
@@ -123,7 +123,7 @@
     }
 
     #flyy {
-      background: url(./pic/b662d6640105c661.png)no-repeat center;
+      background: url(./pic/back.png)no-repeat center;
       width: 380px;
       height: 47px;
       top: 335px;
@@ -136,7 +136,7 @@
       transform: rotate(-90deg);
     }
 
-    /* @keyframes ani {
+    @keyframes ani {
       from {
         background: radial-gradient(rgb(162, 0, 255), salmon 10%, rgb(39, 201, 147) 20%, rgb(162, 0, 255) 30%, salmon 40%, rgb(39, 201, 147) 50%, rgb(162, 0, 255) 60%, salmon 70%, rgb(39, 201, 147) 80%, rgb(162, 0, 255) 90%, salmon);
       }
@@ -148,7 +148,7 @@
       to {
         background: radial-gradient(rgb(162, 0, 255) 20%, salmon 30%, rgb(39, 201, 147) 40%, rgb(162, 0, 255) 50%, salmon 60%, rgb(39, 201, 147) 70%, rgb(162, 0, 255) 80%, salmon 90%, rgb(39, 201, 147) 100%, rgb(162, 0, 255) 10%, salmon);
       }
-    } */
+    }
 
     @keyframes ani1 {
       from {
@@ -194,13 +194,13 @@
     #input1 {
       margin: auto;
       position: relative;
-      left: 5%;
       font-size: 1rem;
+      left: 10%;
     }
 
     #input1 input {
-      width: 200px;
-      height: 20px;
+      text-align: center;
+      font-size: 1.5rem;
     }
   </style>
 </head>
@@ -225,7 +225,8 @@
       <div id="flyy"></div>
     </div>
     <div id="input1">
-      <input type="text" value="" placeholder="請輸入秒數">
+      <input type="text" placeholder="請輸入想倒數的秒數" id="sec">
+      <input type="button" value="SET" id="btn1">
     </div>
   </div>
 
@@ -235,6 +236,9 @@
     const h = document.getElementById('h')
     const m = document.getElementById('m')
     const s = document.getElementById('s')
+    const btn1 = document.getElementById('btn1')
+    const sec = document.getElementById('sec')
+
 
     const clock = () => {
       const now = new Date()
@@ -247,6 +251,30 @@
     clock()
 
     setInterval(clock, 1000)
+
+    btn1.onclick = () => {
+      let timer = setInterval(() => {
+        (sec.value)--
+
+        if (sec.value == 0) {
+          // 時間到
+          clearInterval(timer)
+        }
+      }, 1000)
+      const clock2 = () => {
+        hh.style.transform = `rotate(${6 * sec.value - 90}deg)`
+        mm.style.transform = `rotate(${6 * sec.value - 90}deg)`
+        ss.style.transform = `rotate(${6 * sec.value - 90}deg)`
+        flyy.style.transform = `rotate(${6 * sec.value - 90}deg)`
+
+      }
+
+      clock2()
+
+      setInterval(clock2, 1000)
+    }
+
+
   </script>
 </body>
 
